--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <h2>Simple Pong Game</h2>
   <canvas id="pongCanvas" width="800" height="500"></canvas>
+  <div id="credit">Made by Aynsley</div>
   <script src="pong.js"></script>
 </body>
 </html>
