--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <h2>Simple Pong Game</h2>
   <canvas id="pongCanvas" width="800" height="500"></canvas>
   <div id="credit">Made by Aynsley</div>
+  <div id="deploy-badge" style="margin-bottom:24px;">
+    <a href="https://app.netlify.com/projects/aynsley/deploys" target="_blank" rel="noopener">
+      <img src="https://api.netlify.com/api/v1/badges/10350ca5-d345-4545-87f1-514f3a6fa48c/deploy-status" alt="Netlify Status">
+    </a>
+  </div>
   <script src="pong.js"></script>
 </body>
 </html>
