--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
       <option value="hard">Hard</option>
     </select>
     <button id="startBtn">Start Game</button>
+    <select id="themeSelector">
+      <option value="default">Default</option>
+      <option value="retro">Retro</option>
+      <option value="night">Night</option>
+    </select>
+  </div>
+  <div id="settingsMenu" style="margin-bottom:20px;">
+    <label><input type="checkbox" id="soundToggle" checked> Sound On</label>
   </div>
   <canvas id="pongCanvas" width="800" height="500" style="display:none"></canvas>
   <div id="win-message" style="display:none">
@@ -27,6 +35,10 @@
       <img src="https://api.netlify.com/api/v1/badges/10350ca5-d345-4545-87f1-514f3a6fa48c/deploy-status" alt="Netlify Status">
     </a>
   </div>
+  <!-- Sound effects -->
+  <audio id="hitSound" src="sounds/hit.wav" preload="auto"></audio>
+  <audio id="scoreSound" src="sounds/score.wav" preload="auto"></audio>
+  <audio id="winSound" src="sounds/win.wav" preload="auto"></audio>
   <script src="pong.js"></script>
 </body>
 </html>
